syntax = "proto3";

package com.dboyko.rococo.grpc;


option java_multiple_files = true;
option java_package = "com.dboyko.rococo.grpc";
option java_outer_classname = "GeoProto";

import "pageinfo.proto";

service GeoService {
    rpc GetCountry (GetCountryRequest) returns (GetCountryResponse);
    rpc GetCountryByName (GetCountryByNameRequest) returns (GetCountryResponse);
    rpc GetAllCountries (GetAllCountriesRequest) returns (GetAllCountriesResponse);
}

message GetCountryRequest {
    string id = 1;
}

message GetCountryByNameRequest {
    string name = 1;
}

message GetCountryResponse {
    Country country = 1;
}

message GetAllCountriesRequest {
    PageInfo page_info = 1;
}

message GetAllCountriesResponse {
    repeated Country countries = 1;
    int64 total_elements = 2;
    int32 total_pages = 3;
}

message Country {
    string id = 1;
    string name = 2;
}